--- a/index.html
+++ b/index.html
@@ -1,16 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
-  <link rel="shortcut icon" href="images/Frame.png" type="image/x-icon">
-  <title>Gamer</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="icons/favicon.png" type="image/x-icon">
+    <title>Gamer</title>
+  </head>
+  <body>
+    <header>
+      <div class="logo">
+        <img src="images/Frame.png" alt="Logo">
+        <h2><span>G</span>amer</h2>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="#">Developers</a></li>
+          <li><a href="#">About Us</a></li>
+          <div class="btn-div">
+            <span>Follow Us On</span>
+            <button class="btn-header">
+              <img src="icons/Vectoryoutube.png" alt="Facebook">
+            </button>
+            <button class="btn-header">
+              <img src="icons/tik-tok.png" alt="Youtube">
+            </button>
+          </div>
+        </ul>
+      </nav>
+    </header>
+  </body>
 </html>
