--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
     <title>Gamer</title>
   </head>
   <body>
+
     <header>
       <div class="logo">
         <img src="images/Frame.png" alt="Logo">
-        <h2><span>G</span>amer</h2>
+        <h3><span>G</span>amer</h3>
       </div>
       <nav>
         <ul>
@@ -32,5 +33,57 @@
         </ul>
       </nav>
     </header>
+
+    <main>
+
+      <section class="hero">
+
+        <div class="hero-content">
+          <div>
+            <h3>Play Like The</h3>
+            <h1>G.O.A.T.</h1>
+            <div class="hero-span">
+              <span>
+                <img src="icons/icon.png" alt="Icon">
+                1-Click instant play
+              </span>
+              <span>
+                <img src="icons/icon1.png" alt="Icon">
+                No Download
+              </span>
+              <span>
+                <img src="icons/icon2.png" alt="Icon">
+                1000s of supported online games
+              </span>
+            </div>
+            <div class="hero-btn">
+              <button class="btn-primary">Sign In</button>
+              <button class="btn-secondary">Go Rogue</button>
+            </div>
+          </div>
+        </div>
+
+        <div class="hero-img">
+          <img src="images/Group 18.png" alt="">
+        </div>
+
+      </section>
+
+      <section class="gamer">
+        <div class="gamer-pic">
+          <img src="images/pngwing 4.png" alt="Images">
+        </div>
+        <div class="gamer-content">
+          <h3>We are gamer</h3>
+          <span>
+            An international digital games and entertainment company. We develop, publish and distribute multiplayer mobile games. We reach over 400 million players each month and our audience keeps growing.
+          </span>
+          <button class="btn-primary">know more</button>
+          <h4>Our purpose...<br><span>“unleash the gamer in everyone”</span></h4>
+        </div>
+      </section>
+
+    </main>
+
   </body>
 </html>
