--- a/index.html
+++ b/index.html
@@ -83,6 +83,39 @@
         </div>
       </section>
 
+      <section class="card-sec">
+        <h3>Online Games <span>Funny Videos</span></h3>
+        <span>
+          A Collection of Hilarious Videos to Brighten Your Day
+        </span>
+        <div class="card-container">
+          <a href="#" class="card">
+              <img src="images/Rectangle 4.png" alt="">
+              <span>
+                No Download. No Installs. Play games Instantly on Gamer.
+              </span>
+          </a>
+          <a href="#" class="card">
+            <img src="images/Rectangle 5.png" alt="">
+            <span>
+              Did you score? #unblocked games #school
+            </span>
+          </a>
+          <a href="#" class="card">
+            <img src="images/Rectangle 7.png" alt="">
+            <span>
+              Breaking game records like OG
+            </span>
+          </a>
+          <a href="#" class="card">
+            <img src="images/Rectangle 6.png" alt="">
+            <span>
+              Busted gaming on school laptop, but you are still lit.
+            </span>
+          </a>
+        </div>
+      </section>
+
     </main>
 
   </body>
