card hover done

--- a/index.html
+++ b/index.html
@@ -117,7 +117,29 @@
       </section>
 
       <section class="featured">
-        
+        <div class="featured-content">
+          <h3><span>Play Instantly,</span> No Downloads No Installs.</h3>
+          <span>
+            Play games online for free without downloading. Just click the Play button and play instantly in your browser.
+          </span>
+        </div>
+        <div class="featured-pic">
+          <img class="main-img" src="images/Rectangle 55.png" alt="">
+          <img class="overlap-img" src="images/Rectangle 66.png" alt="">
+        </div>
+      </section>
+
+      <section class="featured">
+        <div class="featured-pic">
+          <img class="main-img" src="images/Rectangle 67.png" alt="">
+          <img class="overlap-img2" src="images/Rectangle 78.png" alt="">
+        </div>
+        <div class="featured-content">
+          <h3><span>Play Games Online </span>Anywhere, Anytime!</h3>
+          <span>
+            Play games online for free without downloading. Just click the Play button and play instantly in your browser.
+          </span>
+        </div>
       </section>
 
     </main>
