category sec done

--- a/index.html
+++ b/index.html
@@ -91,24 +91,40 @@
         <div class="card-container">
           <a href="#" class="card">
               <img src="images/Rectangle 4.png" alt="">
+              <div class="watch-now">
+                <img src="icons/icon.png" alt="">
+                <span>Watch Now</span>
+              </div>
               <span>
                 No Download. No Installs. Play games Instantly on Gamer.
               </span>
           </a>
           <a href="#" class="card">
             <img src="images/Rectangle 5.png" alt="">
+            <div class="watch-now">
+              <img src="icons/icon.png" alt="">
+              <span>Watch Now</span>
+            </div>
             <span>
               Did you score? #unblocked games #school
             </span>
           </a>
           <a href="#" class="card">
             <img src="images/Rectangle 7.png" alt="">
+            <div class="watch-now">
+              <img src="icons/icon.png" alt="">
+              <span>Watch Now</span>
+            </div>
             <span>
               Breaking game records like OG
             </span>
           </a>
           <a href="#" class="card">
             <img src="images/Rectangle 6.png" alt="">
+            <div class="watch-now">
+              <img src="icons/icon.png" alt="">
+              <span>Watch Now</span>
+            </div>
             <span>
               Busted gaming on school laptop, but you are still lit.
             </span>
@@ -140,6 +156,45 @@
             Play games online for free without downloading. Just click the Play button and play instantly in your browser.
           </span>
         </div>
+      </section>
+
+      <section class="category">
+        <a href="#" class="btn-category">
+          <img src="images/Rectangle 11.png" alt="">
+          <span>Action Games</span>
+        </a>
+        <a href="#" class="btn-category">
+          <img src="images/Rectangle 12.png" alt="">
+          <span>Adventure Games</span>
+        </a>
+        <a href="#" class="btn-category">
+          <img src="images/Rectangle 13.png" alt="">
+          <span>Arcade Games</span>
+        </a>
+        <a href="#" class="btn-category">
+          <img src="images/Rectangle 14.png" alt="">
+          <span>Educational Games</span>
+        </a>
+        <a href="#" class="btn-category">
+          <img src="images/Rectangle 15.png" alt="">
+          <span>Word Games</span>
+        </a>
+        <a href="#" class="btn-category">
+          <img src="images/Rectangle 16.png" alt="">
+          <span>Role Palying Games</span>
+        </a>
+        <a href="#" class="btn-category">
+          <img src="images/Rectangle 17.png" alt="">
+          <span>Music & Audio Games</span>
+        </a>
+        <a href="#" class="btn-category">
+          <img src="images/Rectangle 18.png" alt="">
+          <span>Puzzle Games</span>
+        </a>
+        <a href="#" class="btn-category">
+          <img src="images/Rectangle 19.png" alt="">
+          <span>Strategy Games</span>
+        </a>
       </section>
 
     </main>
