--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         </a>
         <a href="#" class="btn-category">
           <img src="images/Rectangle 16.png" alt="">
-          <span>Role Palying Games</span>
+          <span>Role Playing Games</span>
         </a>
         <a href="#" class="btn-category">
           <img src="images/Rectangle 17.png" alt="">
@@ -198,6 +198,40 @@
       </section>
 
     </main>
+
+    <footer>
+      <div class="logo">
+        <img src="images/Frame.png" alt="Logo">
+        <h3><span>G</span>amer</h3>
+      </div>
+
+      <div class="nav-footer">
+        <a href="#">Our Story</a>
+        <a href="#">Games</a>
+        <a href="#">Web Games</a>
+        <a href="#">Careers</a>
+        <a href="#">Supports</a>
+        <a href="#">My Account</a>
+      </div>
+
+      <div class="nav-icon">
+        <a href="#"><img src="icons/Twitter.png" alt=""></a>
+        <a href="#"><img src="icons/facebook.png" alt=""></a>
+        <a href="#"><img src="icons/youtube.png" alt=""></a>
+        <a href="#"><img src="icons/linkedin.png" alt=""></a>
+        <a href="#"><img src="icons/Instagram.png" alt=""></a>
+        <a href="#"><img src="icons/apple.png" alt=""></a>
+      </div>
+
+      <div class="policy-nav">
+        <a href="#">Terms and Conditions</a>
+        <a href="#">Privacy Policy</a>
+        <a href="#">Cookie Policy</a>
+        <a href="#">Privacy Settings</a>
+      </div>
+
+      <span class="copyright">Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</span>
+    </footer>
 
   </body>
 </html>
